# rust-libs

./: README.md
cargo-forge/: Cargo.toml  README.md
cargo-forge/src/: cli.rs  main.rs
cargo-forge/templates/axum-api/: Cargo.toml
cargo-forge/templates/axum-api/src/: main.rs
cargo-forge/templates/cli/: Cargo.toml
cargo-forge/templates/cli/src/: main.rs
